<resources>
    <string name="app_name">Food Planner</string>
    <string name="enter_your_email">enter your email</string>
    <string name="create_account">Create Account</string>
    <string name="enter_password">enter password</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">sign up</string>
    <string name="login">login</string>
    <string name="login_screen">Login screen</string>
    <string name="sign_in_by">sign in using</string>
    <string name="dont_have_an_account">dont have an account?</string>
    <string name="default_web_client_id">860464898961-pqhebtge15eno3ovk8i6rfmu91l9k8aj.apps.googleusercontent.com</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="favorite">favorite</string>
    <string name="calender">calender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">categories</string>
    <string name="your_meal">Random meal</string>
    <string name="how_to_prepare">How to prepare</string>
    <string name="ingredients">ingredients</string>
    <string name="ingredient_name">ingredient name</string>
    <string name="remove">remove</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="search_by_ingredient">Search by Ingredient</string>
    <string name="search_by_area">Search by Area</string>
    <string name="search_by_category">Search by Category</string>
    <string name="search_by_name">Search by Name</string>
    <string name="guest">Guest</string>
</resources>