<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:id="@+id/home_item"
        android:title="@string/home" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/favorite"
        android:id="@+id/favorite_item"
        android:title="@string/favorite" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/search"
        android:id="@+id/search_item"
        android:title="@string/search" />

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/calendar"
        android:id="@+id/clender_item"
        android:title="@string/calender" />

</menu>