<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".search.view.SearchFragment">

    <Button
        android:id="@+id/search_by_ingredient"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/search_by_ingredient"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/search_by_category"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/search_by_category"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/search_by_name"
        android:layout_width="300dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/search_by_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>



    <Button
        android:id="@+id/search_by_area"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/search_by_area"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>


</LinearLayout>
